添加内存控制